--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,23 @@
-body, html {
-  font-family: "Roboto", sans-serif;
-  background: linear-gradient(to bottom, #87e0fd 0%,#53cbf1 40%,#05abe0 100%);
-  height: 100%;
+
+#logo1 {
+  padding-top: 100px;
+  margin: auto;
+  height: 400px;
+  width: 200px;
 }
-.active {
-  color: pink;
+
+#logins {
+  display: flex;
+  justify-content: center;
+}
+
+#b1 {
+  margin: 30px;
+}
+
+#signInContent {
+  padding-top: 200px;
+  margin: auto;
+  width: 200px;
+  height: 200px;
 }
